# academic_university_2016-2018

./: .gitmodules  LICENSE  README.md
Algorithms/: README.md
Algorithms/implementations/: heap.cpp  quadtree.py
Bash&Python/bash_final_test/: fn.sh
Bash&Python/bash_hw1/: 4.sh
Bash&Python/bash_hw2/: 3.sh
Bash&Python/bash_hw3/: 2.sh  3.sh  4_v3.sh  5.sh
Bash&Python/misc/: abstractmethod.py  borg.py  desc_test.py  singleton_dec.py
Bash&Python/python_final_test/: btree.py
Bash&Python/python_hw1/: haskisp.py
Bash&Python/python_hw3/: koltsov_mult.py  koltsov_prof.py
Bash&Python/python_hw4/: singleton.py
C++/: README.md
C++/semester_2/control_5/1/: CMakeLists.txt
C++/semester_2/control_5/1/src/: #signal.hpp#  main.cpp  signal.hpp
Databases/: README.md
FunctionalProgramming/: coursework_tests.hs
FunctionalProgramming/10/: classwork.hs
FunctionalProgramming/11/: Fp11pr.hs  my_parse_error.hs
FunctionalProgramming/12/: solution.hs
FunctionalProgramming/13/: fp13.hs
FunctionalProgramming/14/: fp14SimpleLens.hs  fp14Zippper.hs
FunctionalProgramming/4/: fp.hs  homework.hs
FunctionalProgramming/5/: fp05.hs
FunctionalProgramming/6/: classwork.hs
FunctionalProgramming/8/: homework.hs
FunctionalProgramming/8a/: classwork.hs
FunctionalProgramming/9/: classwork.hs
Haskell/4/: seq.hs  (+1 more)
OperatingSystems/: README.md
projects/: README.md
subjects/: README.md
subjects/C++/semester_2/hw3/: CMakeLists.txt  Makefile
subjects/C++/semester_2/hw3/src/: tests.cpp  thread_pool.cpp
subjects/C++/semester_2/test_6/: CMakeLists.txt  Makefile
(+943 files in other folders)
